# llama-index-introduction

./: .gitignore  app.py  data.dvc  pyproject.toml
.dvc/: config
data/: python_history.txt
